Fixed pickers and scroll issues on mobiles (#11363)
* Fixed daterange picker on mobiles

* Fixed scrolling issues on mobile after list reload

* Fixed login scroll on mobiles

* Fixed clockpicker on mobile

* Fixed datepicker and clockpicker on mobiles

--- a/public_html/layouts/basic/modules/Users/Login.css
+++ b/public_html/layouts/basic/modules/Users/Login.css
@@ -1,3 +1,5 @@
+/* {[The file is published on the basis of YetiForce Public License 3.0 that can be found in the following directory: licenses/LicenseEN.txt or yetiforce.com]} */
+
 @media only screen and (max-width: 480px) {
 	#loginDiv {
 		width: 100%;
@@ -6,6 +8,9 @@
 	.login-area {
 		max-width: 100%;
 		margin: 0 auto;
+	}
+	.login-space {
+		margin-top: 0;
 	}
 }
 
@@ -16,19 +21,19 @@
 	}
 }
 
-@media only screen and (max-height: 340px) {
+@media only screen and (max-width: 340px) {
 	.login-space {
 		margin-top: 0;
 	}
 }
 
-@media only screen and (min-height: 340px) and (max-height: 480px) {
+@media only screen and (min-width: 340px) and (max-width: 480px) {
 	.login-space {
 		margin-top: 10px;
 	}
 }
 
-@media only screen and (min-height: 480px) {
+@media only screen and (min-width: 480px) {
 	.login-space {
 		margin-top: 70px;
 	}
@@ -53,7 +58,8 @@
 	margin-top: 5px;
 }
 
-html, body {
+html,
+body {
 	background: #f0f0f0;
 }
 
@@ -77,7 +83,8 @@ html, body {
 	padding-bottom: 10px;
 }
 
-#forgotpass, .login-text a {
+#forgotpass,
+.login-text a {
 	color: #adb0b5;
 }
 
